--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,22 @@
 {
-    "name": "faparicio/huge_json_import",
+    "name": "faparicio/far-huge-json-import",
+    "description": "Huge php JSON reader",
     "type": "library",
+    "keywords" : [
+      "Huge php json reader"
+    ],
+    "license": "MIT",
     "authors": [
         {
             "name": "Fernando Aparicio",
-            "email": "faparicior@gmail.com"
+            "email": "faparicior@gmail.com",
+            "homepage": "http://www.fernandoaparicio.net",
+            "role": "Developer"
         }
     ],
     "autoload": {
         "psr-4": {
-            "Faparicior\\HugeJsonImport\\": "Lib/"
+            "Faparicior\\FARHugeJsonImport\\": "Lib/"
         }
     }
 }
